--- a/StarWarsRPG/assets/css/style.css
+++ b/StarWarsRPG/assets/css/style.css
@@ -1,68 +1,204 @@
 /* style.css */
-div.box {
-    float: left;
-    min-height: 200px;
-    width: 300px;
-    border-style: solid;
-    border-width: 1px;
-    padding: 10px;
-    margin: 10px;
+
+
+@font-face {
+    font-family: "STARWARS";
+    src: url("../../assets/fonts/STARWARS.eot?") format("eot"),
+        url("../../assets/fonts/STARWARS.woff") format("woff"),
+        url("../../assets/fonts/STARWARS.ttf") format("truetype"),
+        url("../../assets/fonts/STARWARS.svg#STARWARS") format("svg");
+    font-weight:normal;
+    font-style:normal;
 }
-.r {
-    border-color: red;
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+
+body {
+    background-image: url('../../assets/images/deathstar.jpg');
+    background-size: 100%;
+    background-position: center;
+    color: white;
+    font-family: 'PT Sans', sans-serif;
 }
-.b {
-    border-color: blue;
+h1, h2, h3, h4 {
+    color: #ffd700;
+    font-family: STARWARS;
+    text-transform: uppercase;
 }
-.g {
-    border-color: green;
+header {
+    text-align: center;
+}
+h1 {
+    font-size: 2.5em;
+    margin: 1em 0;
+}
+h3 {
+    margin: 0;
+}
+
+/** pre stage **/
+.pre-stage-wrapper {
+    height: auto;
 }
 
 /** players **/
-.players, .enemies-wrapper {
+.players, .enemies, .dead {
     display: flex;
-    align-content: center;
     justify-content: center;
 }
-.players .player {
-    width: 20%;
-}
-.enemies-wrapper .player {
-    width: 30%;
-}
+
 .player {
-    border: 1px solid black;
+    background-size: cover;
+    background-position: center;
+    color: white;
     cursor: pointer;
-    margin: 10px;
+    height: 250px;
+    margin: 10px auto;
     padding: 10px;
+    position: relative;
     transition: all .5s ease-out;
+    width: 250px;
+}
+.player .name {
+    position: absolute; 
+    bottom: 10px;
+    left: 10px;
+}
+.player .health {
+    font-size: 2em;
+    position: absolute; 
+    top: 10px;
+    right: 10px;
 }
 
-/** players **/
-.enemies-wrapper{
-
+#obi {
+    background-image: url('../../assets/images/Star-wars-obi-wan-kenobi.jpg')
+}
+#maul {
+    background-image: url('../../assets/images/Star-Wars-Darth-Maul.jpg')
+}
+#mace {
+    background-image: url('../../assets/images/mace-windu.jpg')
+}
+#darth {
+    background-image: url('../../assets/images/Darthvader.jpg')
 }
 
+.fight h2 {
+    font-size: 10em;
+    line-height: 1;
+    margin: 0;
+    text-align: center;
+}
 
 
 /** stage **/
 .stage-wrapper {
-    border: 3px solid black;
+    border: 3px solid #ffd700;
     padding: 20px;
 }
 .stage {
-    display: flex;
     align-content: center;
+    display: flex;
+    min-height: 350px;
     justify-content: center;
 }
-.dead {
-
+.hero-wrapper, 
+.opponent-wrapper {
+    padding: 10px;
+    width: 310px;
+    text-align: center;
 }
+
+.hero, .opponent {
+    background-color: rgba(255, 255, 255, .2);
+    padding: 10px;
+    /* border: 1px dotted #333;
+    height: 100%; */
+}
+.hero > .player, .opponent > .player {
+    margin: 10px;
+}
+
 .attack-wrapper {
     text-align: center;
 }
 .attack {
+    /* background: linear-gradient(#FFD700 0%, #A98F00 100%) no-repeat 50% 50% / 100% 100%; */
+    border: none;
+    font-family: STARWARS;
+    line-height: 3;
     margin: 0 auto;
     padding: 20px;
-    width: 40%;
+    border-radius: 4px;
+    width: 400px;
+    background-color:#FFD700;
+
+
+
+    background-repeat: no-repeat;
+    background-position: -480px -60px, 0 0;
+    
+    background-image: linear-gradient(
+      0 0,
+      rgba(255,255,255, 0.2) 0%,
+      rgba(255,255,255, 0.2) 37%,
+      rgba(255,255,255, 0.8) 45%,
+      rgba(255,255,255, 0.0) 50%
+    );
+    background-image: -webkit-linear-gradient(
+        top left,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0.2) 37%,
+        rgba(255, 255, 255, 0.8) 45%,
+        rgba(255, 255, 255, 0.0) 50%
+    );
+    background-image: -moz-linear-gradient(
+        0 0,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0.2) 37%,
+        rgba(255, 255, 255, 0.8) 45%,
+        rgba(255, 255, 255, 0.0) 50%
+    );    
+    background-image: -o-linear-gradient(
+        0 0,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0.2) 37%,
+        rgba(255, 255, 255, 0.8) 45%,
+        rgba(255, 255, 255, 0.0) 50%
+    );
+    -moz-background-size: 250% 250%, 100% 100%;
+         background-size: 250% 250%, 100% 100%;
+    
+    -webkit-transition: background-position 0s ease;
+       -moz-transition: background-position 0s ease;       
+         -o-transition: background-position 0s ease;
+            transition: background-position 0s ease;
+}
+.attack:hover {
+    background-position: 0 0, 0 0;
+    -webkit-transition-duration: 0.5s;
+       -moz-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+}
+
+/** post stage **/
+.post-stage-wrapper {
+    min-height: 300px;
+    width: 100%;
+}
+.dead-wrapper {
+    display: none;
+    text-align: center;
+}
+.dead {
+    width: 100%;
+}
+
+.clearfix {
+    overflow: auto;
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
