--- a/CrystalsCollector/assets/css/style.css
+++ b/CrystalsCollector/assets/css/style.css
@@ -69,6 +69,6 @@ header {
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 3px;
-    margin-top: 30px;
+    margin: 30px 0;
     padding: 20px 0;
 }
